--- a/about.html
+++ b/about.html
@@ -486,7 +486,7 @@
               </div>
               <div class="content">
                 <h4 class="title">Sir Muna</h4>
-                <span>Staff &blacksquare; Web Designer</span>
+                <span>Staff &blacksquare; Web Developer</span>
                 <div class="share-icon">
                   <i class="fas fa-share-alt"></i>
                   <ul>
