--- a/about.html
+++ b/about.html
@@ -175,6 +175,11 @@
               <div class="header-mini-btn">
                 <ul>
                   <li>
+                    <a href="https://i.ibb.co/DWgf546/saintaco-cert.jpg">
+                      <span><i class="fas fa-book"> BN:7876977</i></span>
+                    </a>
+                  </li>
+                  <li>
                     <a class="toggle-bar canvas_open" href="#"
                       ><i class="fal fa-bars"></i
                     ></a>
