--- a/index.html
+++ b/index.html
@@ -75,10 +75,14 @@
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
                   </li>
                   <li>
-                    <a href="https://wa.me/2347065604027"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://wa.me/2347065604027"
+                      ><i class="fab fa-whatsapp"></i
+                    ></a>
                   </li>
                   <li>
-                    <a href="mailto:costa4real77@gmail.com"><i class="far fa-envelope"></i></a>
+                    <a href="mailto:costa4real77@gmail.com"
+                      ><i class="far fa-envelope"></i
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -118,11 +122,7 @@
       <div class="header-topbar-layout-2">
         <div class="header-topbar header-topbar-layout-2">
           <div class="row g-0 align-items-center">
-            <div class="col-lg-5">
-              <div class="header-topbar-text">
-                <p>Welcome to SAINTACO CYBERSPACE BASED RESOURCE</p>
-              </div>
-            </div>
+            <div class="col-lg-5"></div>
             <div class="col-lg-7">
               <div class="header-topbar-info-wrapper">
                 <div class="header-topbar-info">
@@ -138,13 +138,17 @@
                 <div class="header-topbar-social">
                   <ul>
                     <li>
-                      <a href="https://wa.me/2347065604027"><i class="fab fa-whatsapp"></i></a>
+                      <a href="https://wa.me/2347065604027"
+                        ><i class="fab fa-whatsapp"></i
+                      ></a>
                     </li>
                     <li>
                       <a href="#"><i class="fab fa-facebook-f"></i></a>
                     </li>
                     <li>
-                      <a href="mailto:costa4real77@gmail.com"><i class="far fa-envelope"></i></a>
+                      <a href="mailto:costa4real77@gmail.com"
+                        ><i class="far fa-envelope"></i
+                      ></a>
                     </li>
                   </ul>
                 </div>
@@ -168,11 +172,34 @@
                 <li>
                   <a href="#">Home</a>
                 </li>
-                <li>
-                  <a href="#services">Services</a>
-                </li>
                 <li><a href="about.html">About</a></li>
+                <li>
+                  <a href="./services.html">Services</a>
+                  <ul class="sub-menu">
+                    <li>
+                      <a href="./index.html#services">Educational Services</a>
+                    </li>
+                    <li>
+                      <a href="./index.html#services">General Services</a>
+                    </li>
+                    <li>
+                      <a href="./index.html#services">Computer Academy</a>
+                    </li>
+                  </ul>
+                </li>
                 <li><a href="#contact">Contact</a></li>
+                <li>
+                  <a href="./services.html">Pages</a>
+                  <ul class="sub-menu">
+                    <li>
+                      <a href="./index.html#services">Our Team</a>
+                    </li>
+                    <li>
+                      <a href="./index.html#services">Team Details</a>
+                    </li>
+                  </ul>
+                </li>
+                <li><a href="#contact">Projects</a></li>
               </ul>
             </div>
           </div>
@@ -180,6 +207,11 @@
             <div class="header-main-info">
               <div class="header-mini-btn">
                 <ul>
+                  <li>
+                    <a href="https://i.ibb.co/DWgf546/saintaco-cert.jpg">
+                      <span><i class="fas"> BN:7876977</i></span>
+                    </a>
+                  </li>
                   <li>
                     <a class="toggle-bar canvas_open" href="#"
                       ><i class="fal fa-bars"></i
@@ -215,7 +247,7 @@
                   data-animation="fadeInDown"
                   data-delay=".1s"
                 >
-                  <a class="video-popup" href="./assets/videos/Felicity.mp4"
+                  <a class="video-popup" href="./assets/videos/Javi.mp4"
                     ><i class="fas fa-play"></i
                   ></a>
                 </div>
@@ -508,7 +540,9 @@
                           <li>- Postgraduate registration</li>
                         </ul>
 
-                        <a class="main-btn" href="https://wa.me/2347065604027">APPLY</a>
+                        <a class="main-btn" href="https://wa.me/2347065604027"
+                          >APPLY</a
+                        >
                       </div>
                     </div>
                   </div>
@@ -531,7 +565,9 @@
                           <li>- Acceptance fee payment</li>
                           <li>- School fees payment</li>
                         </ul>
-                        <a class="main-btn" href="https://wa.me/2347065604027">Make a payment</a>
+                        <a class="main-btn" href="https://wa.me/2347065604027"
+                          >Make a payment</a
+                        >
                       </div>
                     </div>
                   </div>
@@ -554,7 +590,9 @@
                           Register for the computer academy at your earliest
                           convenience
                         </p>
-                        <a class="main-btn" href="https://wa.me/2347065604027">ENROLL</a>
+                        <a class="main-btn" href="https://wa.me/2347065604027"
+                          >ENROLL</a
+                        >
                       </div>
                     </div>
                   </div>
@@ -578,7 +616,9 @@
                           <li>- JAMB original result</li>
                           <li>- NYSC registration</li>
                         </ul>
-                        <a class="main-btn" href="https://wa.me/2347065604027">REGISTER</a>
+                        <a class="main-btn" href="https://wa.me/2347065604027"
+                          >REGISTER</a
+                        >
                       </div>
                     </div>
                   </div>
@@ -604,7 +644,9 @@
                           <li>- Lamination</li>
                           <li>And More...</li>
                         </ul>
-                        <a class="main-btn" href="https://wa.me/2347065604027">EXPLORE</a>
+                        <a class="main-btn" href="https://wa.me/2347065604027"
+                          >EXPLORE</a
+                        >
                       </div>
                     </div>
                   </div>
@@ -705,7 +747,12 @@
                   <h3 class="title">Contact Us Now!</h3>
                 </div>
                 <div class="input-box">
-                  <input type="text" placeholder="Your Name" name="Fullname" required/>
+                  <input
+                    type="text"
+                    placeholder="Your Name"
+                    name="Fullname"
+                    required
+                  />
                 </div>
                 <div class="input-box">
                   <input
@@ -747,13 +794,68 @@
           </div>
           <div class="col-lg-3">
             <div class="cta-btn text-right">
-              <a class="main-btn" href="https://wa.me/2347085420536">Get a Website</a>
+              <button class="main-btn" id="web-btn">Get a Website</button>
             </div>
           </div>
         </div>
       </div>
     </section>
 
+    <!-- website popup starts -->
+    <section class="saintaco-web-popup">
+      <div class="web-container" id="web-container">
+        <button id="web-close">❌</button>
+        <div>
+          <div class="section-title text-center mb-25">
+            <p style="color: #fff; font-weight: 900">Need a Website?</p>
+            <h3 class="title">Get a Website</h3>
+          </div>
+          <button id="form-btn">Send a Mail</button>
+          <button id="form-button">
+            <a href="https://wa.me/2347085420536" >Send a DM</a>
+          </button>
+        </div>
+      </div>
+      <div id="web-form">
+        <button id="form-close" title="close form">❌</button>
+        <form action="https://formspree.io/f/xrbgwvpy" method="post">
+          <div class="section-title text-center mb-25">
+            <span>Need a Website?</span>
+            <h3 class="title">Get a Website</h3>
+          </div>
+          <div class="input-box">
+            <input
+              type="text"
+              placeholder="Your Name"
+              name="Fullname"
+              required
+            />
+          </div>
+          <div class="input-box">
+            <input
+              type="email"
+              placeholder="Email Address"
+              name="email"
+              required
+            />
+          </div>
+          <div class="input-box">
+            <textarea
+              name="Message"
+              id="#"
+              cols="30"
+              rows="10"
+              placeholder="Write a Message"
+              required
+            ></textarea>
+          </div>
+          <div class="input-box">
+            <button class="main-btn" type="submit">Send a message</button>
+          </div>
+        </form>
+      </div>
+    </section>
+    <!-- website popup ends -->
     <!--====== SAINTACO WEB PART ENDS ======-->
 
     <!-- FOOTER STARTS -->
@@ -797,9 +899,21 @@
               <p>Leave a review</p>
               <form action="https://formspree.io/f/xrbgwvpy" method="post">
                 <div class="input-box">
-                  <input type="text" placeholder="Fullname" name="name" required/>
-                  <input type="text" placeholder="Review" name="review" required/>
-                  <button type="submit"><i class="far fa-paper-plane"></i></button>
+                  <input
+                    type="text"
+                    placeholder="Fullname"
+                    name="name"
+                    required
+                  />
+                  <input
+                    type="text"
+                    placeholder="Review"
+                    name="review"
+                    required
+                  />
+                  <button type="submit">
+                    <i class="far fa-paper-plane"></i>
+                  </button>
                 </div>
               </form>
             </div>
