--- a/services.html
+++ b/services.html
@@ -107,7 +107,6 @@
     </div>
 
     <!--====== OFFCANVAS MENU PART ENDS ======-->
-
     <!--====== SAINTACO HEADER PART START ======-->
 
     <section class="infetech-header-area header-sticky">
@@ -151,7 +150,7 @@
                 <li><a href="about.html">About</a></li>
 
                 <li>
-                  <a href="./services.html">Services</a>
+                  <a href="./index.html#services">Services</a>
                   <ul class="sub-menu">
                     <li>
                       <a href="./index.html#services">Educational Services</a>
@@ -165,18 +164,6 @@
                   </ul>
                 </li>
                 <li><a href="./index.html#contact">Contact</a></li>
-                <li>
-                  <a href="./services.html">Pages</a>
-                  <ul class="sub-menu">
-                    <li>
-                      <a href="./index.html#services">Our Team</a>
-                    </li>
-                    <li>
-                      <a href="./index.html#services">Team Details</a>
-                    </li>
-                  </ul>
-                </li>
-                <li><a href="#contact">Projects</a></li>
               </ul>
             </div>
             <div class="header-main-info">
@@ -210,20 +197,19 @@
     </section>
 
     <!--====== SAINTACO HEADER PART ENDS ======-->
-
-    <!--====== SAINTACO BREADCRUMB  PART STARTS ======-->
+    <!--====== INFETECH BREADCRUMB  PART ENDS ======-->
 
     <section class="breadcrumb-area">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
             <div class="breadcrumb-item">
-              <h2 class="title">About us</h2>
+              <h2 class="title">Services</h2>
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                   <li class="breadcrumb-item">
                     <a href="./index.html"
-                      >SAINTACO CYBERSPACE BASED RESOURCE</a
+                      >Saintaco Cyberspace Based Resource</a
                     >
                   </li>
                 </ol>
@@ -234,324 +220,26 @@
       </div>
     </section>
 
-    <!--====== SAINTACO BREADCRUMB  PART ENDS ======-->
+    <!--====== INFETECH BREADCRUMB  PART ENDS ======-->
 
-    <!--====== SAINTACO COMPANY ABOUT PART ENDS ======-->
-
-    <section class="infetech-company-about-area">
-      <div class="container">
-        <div class="row align-items-center">
-          <div
-            class="col-lg-6 animated wow fadeInLeft"
-            data-wow-duration="1000ms"
-            data-wow-delay="0ms"
-          >
-            <div class="company-about-thumb">
-              <div class="icon">
-                <img src="assets/images/SAINTACO LOGO.jpg" alt="" />
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="infetech-about-content">
-              <span>About Our Company</span>
-              <h3 class="title" id="about-title">
-                We Empower Growth in the Digital Age.
-              </h3>
-              <p>
-                We deliver real-time professional IT solutions designed to meet
-                your needs. From advanced training at our Computer Academy to
-                seamless Educational, Payment, Examination, and General IT
-                Services. With a focus on excellence and customer satisfaction.
-              </p>
-              <ul>
-                <li><i class="fal fa-check"></i> Trusted Professionals</li>
-                <li><i class="fal fa-check"></i> Serve the best</li>
-              </ul>
-              <a href="https://wa.me/2347065604027" class="main-btn"
-                >Learn More</a
-              >
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!--====== INFETECH COMPANY ABOUT PART ENDS ======-->
-
-    <!--====== SAINTACO FUN FACTS PART ENDS ======-->
-
-    <section
-      class="infetech-fun-facts-area infetech-fun-facts-about-area pb-120"
-    >
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3 col-md-6">
-            <div class="fun-facts-item">
-              <h4 class="title">
-                <span class="counter">100</span> <sup>+</sup>
-              </h4>
-              <div class="content-box">
-                <span>Customer's Satisfaction</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="fun-facts-item">
-              <h4 class="title">
-                <span class="counter">12</span> <sup>+</sup>
-              </h4>
-              <div class="content-box">
-                <span>Glorious Years</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="fun-facts-item">
-              <h4 class="title">
-                <span class="counter">750</span> <sup>+</sup>
-              </h4>
-              <div class="content-box">
-                <span>Active Clients</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="fun-facts-item">
-              <h4 class="title">
-                <span class="counter">10</span> <sup>+</sup>
-              </h4>
-              <div class="content-box">
-                <span>Professional Team</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!--====== SAINTACO FUN FACTS PART ENDS ======-->
-
-    <!--====== SAINTACO TEAM PART STARTS ======-->
-
-    <section class="infetech-team-area" id="team">
-      <div class="container">
-        <div class="row align-items-center mb-50">
-          <div class="col-lg-6">
-            <div class="section-title">
-              <span>Our Expert People</span>
-              <h4 class="title">Meet Our Professional Team Members</h4>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="section-title pl-100">
-              <p>
-                There are many variations of passages of available but majority
-                have suffered alteration in some form, by humou or randomised
-                words which don't look even slightly believable.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-4 col-md-6">
-            <div
-              class="single-tema-item animated wow fadeInUp"
-              data-wow-duration="1500ms"
-              data-wow-delay="0ms"
-            >
-              <div class="top-line"></div>
-              <div class="thumb">
-                <img src="assets/images/Costa.jpg" alt="" />
-              </div>
-              <div class="content">
-                <h4 class="title">Ndubuisi Onyeka <br />(COSTA)</h4>
-                <span>CEO Saintaco</span>
-                <div class="share-icon">
-                  <i class="fas fa-share-alt"></i>
-                  <ul>
-                    <li>
-                      <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    </li>
-                    <li>
-                      <a href="https://wa.me/2347085420536"
-                        ><i class="fab fa-whatsapp"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="mailto:costa4real77@gmail.com"
-                        ><i class="far fa-envelope"></i
-                      ></a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div
-              class="single-tema-item animated wow fadeInUp"
-              data-wow-duration="1500ms"
-              data-wow-delay="300ms"
-            >
-              <div class="top-line"></div>
-              <div class="thumb">
-                <img src="assets/images/peduf.jpg" alt="" />
-              </div>
-              <div class="content">
-                <h4 class="title">Vee Peduf</h4>
-                <span>Staff &blacksquare; Designer</span>
-                <div class="share-icon">
-                  <i class="fas fa-share-alt"></i>
-                  <ul>
-                    <li>
-                      <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    </li>
-                    <li>
-                      <a href="https://wa.me/2347064198588"
-                        ><i class="fab fa-whatsapp"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="far fa-envelope"></i></a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div
-              class="single-tema-item animated wow fadeInUp"
-              data-wow-duration="1500ms"
-              data-wow-delay="600ms"
-            >
-              <div class="top-line"></div>
-              <div class="thumb">
-                <img src="assets/images/Muna.jpg" alt="" />
-              </div>
-              <div class="content">
-                <h4 class="title">Sir Muna</h4>
-                <span>Staff &blacksquare; Web Developer</span>
-                <div class="share-icon">
-                  <i class="fas fa-share-alt"></i>
-                  <ul>
-                    <li>
-                      <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    </li>
-                    <li>
-                      <a href="https://wa.me/2347085420536"
-                        ><i class="fab fa-whatsapp"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="mailto:davidmunason@gmail.com"
-                        ><i class="far fa-envelope"></i
-                      ></a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!--====== SAINTACO TEAM PART ENDS ======-->
-
-    <!--====== SAINTACO PROMO BANNER PART STARTS ======-->
-
-    <section
-      class="infetech-promo-banner-area infetech-promo-banner-about animated wow fadeIn"
-      data-wow-duration="1500ms"
-      data-wow-delay="0ms"
-    >
+    <!-- second section starts -->
+    <section class="infetech-clients-area" id="services">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-lg-9">
-            <div class="promo-banner-item text-center">
+          <div class="col-lg-8">
+            <div class="section-title text-center mb-55">
+              <span>What We’re Offering to Our Clients</span>
               <h3 class="title">
-                Better IT Solutions & Services at your Fingertips
+                Real Time Dealing in all Professional IT Solutions & Services
               </h3>
-              <a class="main-btn" href="https://wa.me/2347065604027"
-                >Learn More</a
-              >
             </div>
           </div>
         </div>
       </div>
     </section>
+    <!-- second section ends -->
 
-    <!--====== SAINTACO PROMO BANNER PART ENDS ======-->
-
-    <!--====== SAINTACO SPONSER PART ENDS ======-->
-
-    <div class="infetech-sponser-area infetech-sponser-about-area">
-      <div class="container">
-        <div class="row infetech-sponser-slide">
-          <div class="col-lg-3">
-            <div class="infetech-sponser-item">
-              <img src="assets/images/Samsung.jpg" alt="" />
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="infetech-sponser-item">
-              <img src="assets/images/brand-logo.png" alt="" />
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="infetech-sponser-item">
-              <img src="assets/images/Samsung.jpg" alt="" />
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="infetech-sponser-item">
-              <img src="assets/images/brand-logo.png" alt="" />
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="infetech-sponser-item">
-              <img src="assets/images/Samsung.jpg" alt="" />
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="infetech-sponser-item">
-              <img src="assets/images/brand-logo.png" alt="" />
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!--====== SAINTACO SPONSER PART ENDS ======-->
-
-    <!--====== SAINTACO WEB PART ENDS ======-->
-
-    <section class="infetech-cta-2-area pt-100 pb-100">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-lg-9">
-            <div class="cta-content">
-              <p>Need a Website?</p>
-              <h2 class="title">We’re here to help build your website.</h2>
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="cta-btn text-right">
-              <a class="main-btn" href="https://wa.me/2347085420536"
-                >Get a Website</a
-              >
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!--====== SAINTACO WEB PART ENDS ======-->
-
-    <!--====== SAINTACO FOOTER STARTS ======-->
+    <!-- FOOTER STARTS -->
 
     <footer class="infetech-footer-area">
       <div class="container">
@@ -595,7 +283,7 @@
                   <input
                     type="text"
                     placeholder="Fullname"
-                    name="Fullname"
+                    name="name"
                     required
                   />
                   <input
@@ -640,8 +328,6 @@
       </p>
     </div>
 
-    <!--====== SAINTACO FOOTER ENDS ======-->
-
     <!--====== GO TO TOP PART START ======-->
 
     <div class="go-top-area">
@@ -683,6 +369,4 @@
     <!--====== Main js ======-->
     <script src="assets/js/main.js"></script>
   </body>
-
-  <!-- Mirrored from pixydrops.com/infetech/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 16 Dec 2024 21:48:20 GMT -->
 </html>
