--- a/page-1.html
+++ b/page-1.html
@@ -44,129 +44,157 @@
     <!-- COMING SOON STYLE -->
     <!-- COMING SOON STYLE -->
     <!-- COMING SOON STYLE -->
-    <style>
-      .body {
-        margin: 0;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        background: linear-gradient(135deg, #6a11cb, #2575fc);
-        overflow: hidden;
-        font-family: "Arial", sans-serif;
-        color: white;
-        position: sticky;
-        left: 0;
-        top: 0;
-        z-index: 12;
-      }
+  <style>
+    /* Base Styles */
+    .body {
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background: linear-gradient(135deg, #6a11cb, #2575fc);
+      overflow: hidden;
+      font-family: 'Arial', sans-serif;
+      color: white;
+    }
 
-      .container {
-        text-align: center;
-      }
+    .container {
+      text-align: center;
+      padding: 1rem;
+    }
 
-      h1 {
-        font-size: 4rem;
-        text-transform: uppercase;
-        animation: bounce 1.5s infinite;
-      }
+    h1 {
+      font-size: 4rem;
+      text-transform: uppercase;
+      animation: bounce 1.5s infinite;
+      margin: 0;
+    }
 
-      @keyframes bounce {
-        0%,
-        100% {
-          transform: translateY(0);
-        }
-        50% {
-          transform: translateY(-20px);
-        }
-      }
+    .subtitle {
+      margin-top: 1rem;
+      font-size: 1.5rem;
+      opacity: 0;
+      animation: fadeIn 2s forwards 1.5s;
+      color: #fff;
+    }
 
-      .subtitle {
-        margin-top: 1rem;
-        font-size: 1.5rem;
+    /* Bubbles Animation */
+    .bubble {
+      position: absolute;
+      bottom: -100px;
+      background: rgba(255, 255, 255, 0.2);
+      border-radius: 50%;
+      animation: moveUpDown 5s infinite alternate;
+    }
+
+    /* Individual Bubbles */
+    .bubble:nth-child(1) {
+      width: 50px;
+      height: 50px;
+      left: 5%;
+      animation-duration: 10s;
+    }
+
+    .bubble:nth-child(2) {
+      width: 60px;
+      height: 60px;
+      left: 15%;
+      animation-duration: 8s;
+    }
+
+    .bubble:nth-child(3) {
+      width: 70px;
+      height: 70px;
+      left: 25%;
+      animation-duration: 9s;
+    }
+
+    .bubble:nth-child(4) {
+      width: 40px;
+      height: 40px;
+      left: 35%;
+      animation-duration: 11s;
+    }
+
+    .bubble:nth-child(5) {
+      width: 80px;
+      height: 80px;
+      left: 45%;
+      animation-duration: 7s;
+    }
+
+    .bubble:nth-child(6) {
+      width: 50px;
+      height: 50px;
+      left: 55%;
+      animation-duration: 6s;
+    }
+
+    .bubble:nth-child(7) {
+      width: 90px;
+      height: 90px;
+      left: 65%;
+      animation-duration: 12s;
+    }
+
+    .bubble:nth-child(8) {
+      width: 60px;
+      height: 60px;
+      left: 75%;
+      animation-duration: 8s;
+    }
+
+    .bubble:nth-child(9) {
+      width: 70px;
+      height: 70px;
+      left: 85%;
+      animation-duration: 9s;
+    }
+
+    .bubble:nth-child(10) {
+      width: 40px;
+      height: 40px;
+      left: 95%;
+      animation-duration: 6s;
+    }
+
+    /* Keyframes */
+    @keyframes bounce {
+      0%, 100% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(-20px);
+      }
+    }
+
+    @keyframes fadeIn {
+      0% {
         opacity: 0;
-        animation: fadeIn 2s forwards 1.5s;
-        color: #fff;
       }
+      100% {
+        opacity: 1;
+      }
+    }
 
-      @keyframes fadeIn {
-        0% {
-          opacity: 0;
-        }
-        100% {
-          opacity: 1;
-        }
+    @keyframes moveUpDown {
+      0% {
+        transform: translateY(0);
       }
+      100% {
+        transform: translateY(-300px);
+      }
+    }
 
-      .bubble {
-        position: absolute;
-        bottom: -100px;
-        background: rgba(255, 255, 255, 0.2);
-        border-radius: 50%;
-        animation: moveUp 10s infinite;
-      }
-
-      .bubble:nth-child(1) {
-        width: 50px;
-        height: 50px;
-        left: 10%;
-        animation-duration: 12s;
-      }
-
-      .bubble:nth-child(2) {
-        width: 70px;
-        height: 70px;
-        left: 25%;
-        animation-duration: 15s;
-      }
-
-      .bubble:nth-child(3) {
-        width: 100px;
-        height: 100px;
-        left: 50%;
-        animation-duration: 10s;
-      }
-
-      .bubble:nth-child(4) {
-        width: 120px;
-        height: 120px;
-        left: 75%;
-        animation-duration: 20s;
-      }
-
-      .bubble:nth-child(5) {
-        width: 40px;
-        height: 40px;
-        left: 90%;
-        animation-duration: 8s;
-      }
-
-      @keyframes moveUp {
-        0% {
-          transform: translateY(0);
-          opacity: 1;
-        }
-        100% {
-          transform: translateY(-120vh);
-          opacity: 0;
-        }
-      }
-       @media (max-width: 768px) {
+    /* Responsive Design */
+    @media (max-width: 768px) {
       h1 {
         font-size: 2.5rem;
       }
 
       .subtitle {
         font-size: 1.2rem;
-      }
-
-      .bubble:nth-child(1),
-      .bubble:nth-child(2),
-      .bubble:nth-child(3),
-      .bubble:nth-child(4),
-      .bubble:nth-child(5) {
-        animation-duration: 14s;
       }
     }
 
@@ -179,7 +207,7 @@
         font-size: 1rem;
       }
     }
-    </style>
+  </style>
     <!-- COMING SOON STYLE -->
     <!-- COMING SOON STYLE -->
     <!-- COMING SOON STYLE -->
@@ -439,6 +467,11 @@
         <p class="subtitle">Stay tuned, page is yet to be uploaded!</p>
       </div>
 
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
       <div class="bubble"></div>
       <div class="bubble"></div>
       <div class="bubble"></div>
