--- a/page-2.html
+++ b/page-2.html
@@ -412,7 +412,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="breadcrumb-item">
-              <h2 class="title">OUR TEAM</h2>
+              <h2 class="title">TEAM DETAILS</h2>
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                   <li class="breadcrumb-item">
