--- a/page-1.html
+++ b/page-1.html
@@ -57,6 +57,10 @@
       overflow: hidden;
       font-family: 'Arial', sans-serif;
       color: white;
+      position: sticky;
+      top: 0;
+      left: 0;
+      z-index: 11;
     }
 
     .container {
